--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,15 @@
     <link rel="stylesheet" href="assets/css/main.min.css">
 </head>
 <body>
-    <h1>Startseite</h1>
-    <h3></h3>
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <h1>Startseite</h1>
+                <h3>...</h3>
+            </div>
+        </div>
+    </div>
+    
     <script src="assets/js/main.min.js"></script>
 </body>
 </html>
